overlap styling issues

--- a/task-manager-frontend/src/components/board/board.module.css
+++ b/task-manager-frontend/src/components/board/board.module.css
@@ -5,13 +5,14 @@
     height: 100%;
     align-items: start;
     justify-content: start;
+    position: relative;
 }
 
 .headerText {
     font-family: 'Open Sans', sans-serif;
     font-weight: 600;
     font-size: 2vw;
-    text-align: center;
+    text-align: left;
     color: #343434;
 }
 
@@ -19,7 +20,7 @@
     font-family: 'Poppins', sans-serif;
     font-weight: 600;
     font-size: 1.5vw;
-    text-align: center;
+    text-align: left;
     color: black;
 }
 
@@ -70,9 +71,12 @@
 .boardHeader {
     display: flex;
     flex-direction: row;
-    justify-content: space-between;
+    justify-content: space-evenly;
     align-items: center;
-    width: 70vw;
+    width: 80vw;
+    height: 20vh;
+    gap: 50vw;
+    margin-right: 5vw;
 }
 
 .tasksContainer {
@@ -81,6 +85,7 @@
     justify-content: space-evenly;
     width: auto;
     height: auto;
+    margin-top: 25vh;
 }
 
 .taskCategory {
@@ -95,4 +100,17 @@
     scrollbar-width: thin;
     -ms-overflow-style: auto;
     scrollbar-color: #9CB7C5 transparent;
+}
+
+.boardHeaderContainer {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    align-items: center;
+    width: 80vw;
+    height: 20vh;
+    position: fixed;
+    top: 0;
+    background-color: white;
+    z-index: 100;
 }
