--- a/task-manager-frontend/src/components/navBar/navBar.module.css
+++ b/task-manager-frontend/src/components/navBar/navBar.module.css
@@ -8,7 +8,7 @@
     position: fixed;
     top: 0;
     left: 0;
-    z-index: 1000;
+    z-index: 100;
     background-color: white;
 }
 
