--- a/task-manager-frontend/src/components/taskDisplayItem/taskDisplay.module.css
+++ b/task-manager-frontend/src/components/taskDisplayItem/taskDisplay.module.css
@@ -39,7 +39,7 @@
     display: flex;
     flex-direction: column;
     position: absolute;
-    z-index: 1000;
+    z-index: 10;
     background-color: #FFFFFF;
     right: 0.5vw;
     top: 4vh;
